Fix screen overflow

--- a/src/components/Nav/_Nav.scss
+++ b/src/components/Nav/_Nav.scss
@@ -93,9 +93,11 @@ h3 span {
   margin-right: 12px;
   text-decoration: none;
   color: #fff;
+  display: flex;
+  align-items: center;
 
   &:hover {
-    border: 2px solid black;
+    cursor: pointer;
   }
 }
 
